--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
   "license": "ISC",
   "scripts": {
     "start": "http-server wwwroot -c-1 --silent -p 8081",
-    "show-year:rbb": "PERSON=rbb start-server-and-test 8081 'node ./src/index.mjs'",
-    "show-year:blb": "PERSON=blb start-server-and-test 8081 'node ./src/index.mjs'",
-    "show-year:alex": "PERSON=alex start-server-and-test 8081 'node ./src/index.mjs'",
+    "show-year": "start-server-and-test 8081 'node ./src/index.mjs'",
     "start2": "npx http-server wwwroot && node ./src/index.mjs"
   },
   "dependencies": {
